# Server

./: .gitignore  CMakeLists.txt
include/: server.h  session.h
lib/: CMakeLists.txt  server.cpp  session.cpp
scripts/: GoogleTestInstall.sh
test/: CMakeLists.txt  sampleTest.cpp
tools/: CMakeLists.txt  serverMain.cpp
